# anexia-monitoring-django

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  apps.py  decorators.py  pyproject.toml  requirements.txt  setup.py  urls.py  views.py
.github/workflows/: publish.yml  test.yml  tests.yml
anexia_monitor/: apps.py  decorators.py  views.py
anexia_monitoring/: core.py  decorators.py  events.py  urls.py  views.py
anexia_monitoring/management/commands/: anxmonitormodules.py
tests/: manage.py
tests/core/: asgi.py  settings.py  urls.py  wsgi.py
tests/test_project/: manage.py
tests/test_project/test_project/: settings.py  tests.py  urls.py
